forge install: forge-std
v1.7.6

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "contract-deployment-demos/forge_example/lib/forge-std"]
 	path = contract-deployment-demos/forge_example/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "contract-deployment-demos/forge_demo/lib/forge-std"]
+	path = contract-deployment-demos/forge_demo/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
