--- a/contract-deploy-demo/package.json
+++ b/contract-deploy-demo/package.json
@@ -8,7 +8,7 @@
     "test": "npx hardhat test",
     "clean": "npx hardhat clean",
     "deploy:hh": "npx hardhat run --network hardhat scripts/deploy.ts",
-    "deploy:scrollTestnet": "npx hardhat run --network scrollTestnet scripts/deploy.ts"
+    "deploy:morphTestnet": "npx hardhat run --network morphTestnet scripts/deploy.ts"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
