--- a/contract-deployment-demos/foundry-demo/.env.example
+++ b/contract-deployment-demos/foundry-demo/.env.example
@@ -1,4 +1,4 @@
 DEPLOYER_PRIVATE_KEY=xxxxxx
-RPC_URL=https://rpc-testnet.morphl2.io/
-VERIFIER_URL=https://explorer-api-testnet.morphl2.io/api?
+RPC_URL=https://rpc-holesky.morphl2.io/
+VERIFIER_URL=https://explorer-api-holesky.morphl2.io/api?
 
